--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <meta name="description" content="pys is a simple(< 1 Kb) javascript library for browserjs / nodejs to engance String.substring / Array.slice with python slice style." />
   <meta name="subject" content="pys, python slice, substring, enganced substring, enganced slice" />
   <style type="text/css">
+  body {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
   pre {
     background-color: #f6dcd7;
     padding: 10px 15px;
@@ -14,7 +18,6 @@
   pre.strong {
     font-weight: bold;
   }
-  "pys, python slice,string,array,python-style,substring,slice,enganced substring,enganced slice"
   </style>
 </head>
 <body>
@@ -22,6 +25,18 @@
   <p>
     Project <a href="https://github.com/hustcc/pys">pys</a> is a simple(< 1 Kb) javascript for browserjs / nodejs library to engance String.substring / Array.slice with python slice style.
   </p>
+
+  <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- sorry for ad -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-7292810486004926"
+       data-ad-slot="7806394673"
+       data-ad-format="auto"></ins>
+  <script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+
   <h2> Install </h2>
   <pre class="strong">
 npm install pys </pre>
